# discord-bot-rs

./: .envrc  .gitignore  Cargo.toml  default.nix  flake.nix  rustfmt.toml  yae.json
bot_cmd_activity_roles/: Cargo.toml  lib.rs  log.rs
bot_cmd_ask/: Cargo.toml  ask.rs  autocomplete.rs  buttons.rs  cmd_ask.rs  cmd_configure_ask_game.rs  cmd_delete_ask_defaults.rs  cmd_delete_ask_game.rs  cmd_new_ask_defaults.rs  lib.rs  schedule_ask_updates.rs  schedule_updates.rs  update_worker.rs  worker_ask_update.rs  worker_game_roles.rs
bot_cmd_bedtime/: Cargo.toml  bedtime.rs  buttons.rs  cmd.rs  interval_set.rs  lib.rs  loop.rs  weekly_time.rs
bot_cmd_economy/: Cargo.toml  account.rs  buy_in.rs  gamble.rs  leaderboard.rs  lib.rs  pay_out.rs  table.rs
bot_cmd_ephemeral_voice_channels/: Cargo.toml  lib.rs
bot_cmd_eval/: Cargo.toml  lib.rs  sandbox.rs
bot_cmd_message/: Cargo.toml  lib.rs
bot_cmd_periodic_region_change/: Cargo.toml  lib.rs
bot_cmd_role_buttons/: Cargo.toml  lib.rs
bot_cmd_role_icon/: Cargo.toml  lib.rs
bot_cmd_roles/: Cargo.toml  lib.rs
bot_cmd_tts/: Cargo.toml  lib.rs  tts.rs
bot_core/: Cargo.toml  audio.rs  autocomplete.rs  choice_parameters.rs  color_parameter.rs  hash_store.rs  interval_set.rs  iso_week.rs  iso_weekday.rs  lib.rs  lock_set.rs  result_ext.rs  roles.rs  serde.rs  template.rs  timer_queue.rs  voice_change.rs
bot_core/ext/: create_reply.rs  option.rs  result.rs  set.rs
bot_main/: Cargo.toml  build.rs  cmd.rs  config.rs  data.rs  error_handling.rs  log.rs  main.rs  message_file.rs  util.rs
nix/: discord-bot-rs.nix  nixos-module.nix  package.nix  rstrict.nix  scope.nix  service.nix
npins/: sources.json
src/: main.rs
