[workspace]
resolver = "3"
members = [
    "bot_core",
    "bot_cmd_ask",
    "bot_cmd_bedtime",
    "bot_cmd_ephemeral_voice_channels",
    "bot_cmd_eval",
    "bot_cmd_message",
    "bot_cmd_roles",
    "bot_cmd_periodic_region_change",
    "bot_cmd_tts",
    "bot_main",
    "bot_cmd_role_icon",
    "bot_cmd_economy",
]

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["serde"] }
color-eyre = "0.6.5"
dashmap = "6.1.0"
derive_more = { version = "2.0.1", features = ["full"] }
dotenvy = "0.15"
emojis = "0.8.0"
eyre = "0.6.12"
fancy-regex = "0.17.0"
filetime = "0.2.23"
futures = "0.3.30"
hex = "0.4.3"
imara-diff = "0.2.0"
itertools = "0.14.0"
once_cell = "1.21.1"
# they added #[string] but it does not work on slash args yet: https://github.com/serenity-rs/poise/pull/387
poise = { git = "https://github.com/serenity-rs/poise", rev = "d5d8bafb6493b5d7292422b711398bd9bebd7d02" }
rand = "0.10.0"
regex = "1.11.1"
reqwest = { version = "0.13", features = ["json", "query", "rustls"] }
rustls = "0.23"
rlimit = "0.11.0"
scraper = "0.26.0"
sensible = "0.1.0"
serde = "^1.0"
serde_json = "1.0"
serde_with = "3.13.0"
serde_yaml_ng = "0.10"
serenity = { version = "0.12.1", features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "voice",
    "cache",
] }
sha2 = "0.11.0"
songbird = { version = "0.6", features = ["builtin-queue"] }
symphonia = { version = "0.5.2", features = ["mp3"] }
thousands = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.4"
uuid = { version = "1.14.0", features = ["v4", "fast-rng", "serde"] }

[workspace.lints.clippy]
get_first = "allow"
let_and_return = "allow"
too_many_arguments = "allow"

[profile.dev.package.backtrace]
opt-level = 3
