[package]
name = "bot_cmd_bedtime"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bot_core.path = "../bot_core"
chrono.workspace = true
dashmap.workspace = true
derive_more.workspace = true
eyre.workspace = true
itertools.workspace = true
poise.workspace = true
sensible.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true

