[package]
name = "bot_cmd_economy"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bot_core.path = "../bot_core"
chrono.workspace = true
dashmap.workspace = true
eyre.workspace = true
fancy-regex.workspace = true
image_search.workspace = true
itertools.workspace = true
poise.workspace = true
reqwest.workspace = true
scraper.workspace = true
sensible.workspace = true
serde.workspace = true
serde_with.workspace = true
serde_yml.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
uuid.workspace = true

[lints]
workspace = true
