[package]
name = "bot_cmd_ephemeral_voice_channels"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bot_core.path = "../bot_core"
dashmap.workspace = true
eyre.workspace = true
itertools.workspace = true
poise.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

