[package]
name = "bot_cmd_periodic_region_change"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
bot_core.path = "../bot_core"
chrono.workspace = true
dashmap.workspace = true
eyre.workspace = true
poise.workspace = true
sensible.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true

