[package]
name = "bot_cmd_tts"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
bot_core.path = "../bot_core"
dashmap.workspace = true
eyre.workspace = true
futures.workspace = true
itertools.workspace = true
poise.workspace = true
rand.workspace = true
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
