[package]
name = "bot_core"
version.workspace = true
edition.workspace = true

[lib]
path = "lib.rs"

[dependencies]
async-trait.workspace = true
chrono.workspace = true
dashmap.workspace = true
eyre.workspace = true
fancy-regex.workspace = true
filetime.workspace = true
hex.workspace = true
itertools.workspace = true
poise.workspace = true
serde.workspace = true
sha2.workspace = true
songbird.workspace = true
symphonia.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
